Update dependencies (now MC 1.20.2)