@@ -7,47 +7,33 @@ import com.github.mittenmc.serverutils.SubCommand;
 import org.bukkit.Bukkit;
 import org.bukkit.ChatColor;
 import org.bukkit.command.CommandSender;
-import org.bukkit.entity.*;
+import org.bukkit.entity.Display;
+import org.bukkit.entity.Entity;
+import org.bukkit.entity.EntityType;
+import org.bukkit.entity.Player;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class GlowCommand extends SubCommand {
 
-    private final AdminCommandManager adminCommandManager;
     private final XDisplays instance;
 
     public GlowCommand(AdminCommandManager adminCommandManager, XDisplays instance) {
-        this.adminCommandManager = adminCommandManager;
         this.instance = instance;
-    }
 
-    @Override
-    public String getName() {
-        return "glow";
-    }
-
-    @Override
-    public String getDescription() {
-        return "Make nearby displays glow";
-    }
-
-    @Override
-    public String getSyntax() {
-        return "/" + adminCommandManager.getCommandDisplayName() + " glow [range] [seconds]";
-    }
-
-    @Override
-    public String getColoredSyntax() {
-        return ChatColor.YELLOW + "Usage: " + getSyntax();
+        setName("glow");
+        setDescription("Make nearby displays glow");
+        setSyntax("/" + adminCommandManager.getCommandDisplayName() + " glow [range] [seconds]");
+        setColoredSyntax(ChatColor.YELLOW + getSyntax());
+        setPermission(adminCommandManager.getPermissionPrefix() + getName().toLowerCase());
     }
 
     @Override
     public void perform(CommandSender sender, String[] args) {
-        if (!(sender instanceof Player)) return;
-        Player player = (Player) sender;
+        if (!(sender instanceof Player player)) return;
 
         int range = 3;
         if (args.length > 1) {
@@ -73,7 +59,7 @@ public class GlowCommand extends SubCommand {
 
         ArrayList<Display> arr = new ArrayList<>();
         for (Entity e : Objects.requireNonNull(player.getLocation().getWorld()).getNearbyEntities(player.getLocation(), range, range, range).stream()
-                .filter(e -> e.getType() == EntityType.BLOCK_DISPLAY || e.getType() == EntityType.ITEM_DISPLAY).collect(Collectors.toList())) {
+                .filter(e -> e.getType() == EntityType.BLOCK_DISPLAY || e.getType() == EntityType.ITEM_DISPLAY).toList()) {
             arr.add((Display) e);
             e.setGlowing(true);
         }
@@ -86,7 +72,7 @@ public class GlowCommand extends SubCommand {
             }
         }, seconds * 20L);
 
-        if (arr.size() > 0) {
+        if (!arr.isEmpty()) {
             sender.sendMessage(ChatColor.GREEN + "Found " + arr.size() + " display(s) within " + range + " blocks");
             sender.sendMessage(ChatColor.GREEN + "They will glow for " + seconds + " seconds");
         }
@@ -97,6 +83,6 @@ public class GlowCommand extends SubCommand {
 
     @Override
     public List<String> getSubcommandArguments(CommandSender sender, String[] args) {
-        return new ArrayList<>();
+        return Collections.emptyList();
     }
 }
